# myniche

./: README.md
backend/: .env  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml
backend/apps/: __init__.py
backend/apps/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_user_google_sub.py  0003_user_agreed_to_privacy.py  0004_user_main_platform.py
backend/apps/accounts/services/: facebook_auth.py  google_auth.py  jwt_service.py  quota_service.py  supabase_profile.py
backend/apps/ai/: factory.py  tasks.py
backend/apps/ai/prompts/: daily_topics_prompt.py  planner_prompt.py  script_prompt.py
backend/apps/ai/providers/: base.py  gemini.py  openai.py
backend/apps/ai/services/: planner_generator.py  (+1 more)
backend/apps/analytics/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/common/: admin.py  middleware.py  models.py  views.py
backend/apps/jobs/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/planner/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/public/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/scripts/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/core/: celery.py  db.sqlite3  settings.py  urls.py
backend/core/settings/: base.py  development.py  production.py
backend/generator/: prompts.py  urls.py  views.py
backend/tests/: test_auth.py  test_planner.py  test_scripts.py
(+92 files in other folders)
