[tool.poetry]
name = "myniches"
version = "0.1.0"
description = ""
authors = ["okechuqu <chukwummnl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.5"
djangorestframework = "^3.17.1"
django-cors-headers = "^4.9.0"
openai = "^2.38.0"
python-decouple = "^3.8"
django-jazzmin = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
