[tool.poetry]
name = "myniches"
version = "0.1.0"
description = ""
authors = ["okechuqu <chukwummnl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.5"
djangorestframework = "^3.17.1"
django-cors-headers = "^4.9.0"
openai = "^2.38.0"
python-decouple = "^3.8"
django-jazzmin = "^3.0.4"
djangorestframework-simplejwt = "^5.5.1"
psycopg = {extras = ["binary"], version = "^3.3.4"}
google-generativeai = "^0.8.6"
celery = "^5.6.3"
redis = "^8.0.0"
drf-spectacular = "^0.29.0"
django-allauth = "^65.18.0"
dj-rest-auth = "^7.2.0"
requests = "^2.34.2"
djangorestframework-camel-case = "^1.4.2"
gunicorn = "^26.0.0"
whitenoise = "^6.12.0"
google-genai = "^2.8.0"
google-auth = "^2.53.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
